static/client/manifests/overlays/stage/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grpc-demo-client
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - grpc.microsmart.tk
    secretName: microsmart-wildcard-tls
  rules:
    - host: grpc.microsmart.tk
      http:
        paths:
        - path: /
          backend:
            serviceName: client
            servicePort: 3000
